# aws-practice-and-flask

./: Dockerfile  Dockerfilecelery  Makefile  README.md  buildspec.yml  decorated.py  docker-compose.yml  install-packages.sh  poetry-install.sh  pyproject.toml  setup.py  test.py
cli/commands/: cmd_cov.py  cmd_flake8.py  cmd_test.py
config/: settings.py
instance/: settings.py
snakeeyes/: app.py  extensions.py
snakeeyes/blueprints/: __init__.py
snakeeyes/blueprints/contact/: forms.py  views.py
snakeeyes/blueprints/contact/templates/contact/: index.html
snakeeyes/blueprints/feedback/: forms.py  views.py
snakeeyes/blueprints/feedback/templates/: index.html
snakeeyes/blueprints/learn/: __init__.py  views.py
snakeeyes/blueprints/learn/templates/: test.html
snakeeyes/blueprints/page/: views.py
snakeeyes/blueprints/page/templates/: faq.html  home.html
snakeeyes/blueprints/user/: forms.py  models.py
snakeeyes/static/scripts/project/: app.js
snakeeyes/templates/layouts/: app.html  base.html  login.html
snakeeyes/templates/macros/: form.html  form2.html
snakeeyes/tests/: conftest.py
snakeeyes/tests/contact/: test_views.py
snakeeyes/tests/learn/: test_views.py
snakeeyes/tests/page/: test_views.py
