[tool.poetry]
name = "flask-practice"
version = "0.1.0"
description = ""
authors = ["amoghdatt <amoghdatt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
amqp = "2.6.1"
astroid = "2.4.2"
attrs = "20.2.0"
billiard = "3.6.3.0"
blinker = "1.4"
celery = "4.4.7"
click = "7.1.2"
coverage = "5.3"
decorator = "4.4.2"
flake8 = "3.8.3"
Flask = "1.1.2"
Flask-DebugToolbar = "0.11.0"
Flask-Mail = "0.9.1"
Flask-SQLAlchemy = "2.4.4"
Flask-WTF = "0.14.3"
gunicorn = "20.0.4"
importlib-metadata = "1.7.0"
infinity = "1.5"
iniconfig = "1.0.1"
intervals = "0.9.0"
isort = "5.4.2"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
kombu = "4.6.11"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
more-itertools = "8.5.0"
packaging = "20.4"
pluggy = "0.13.1"
py = "1.9.0"
pycodestyle = "2.6.0"
pyflakes = "2.2.0"
pylint = "2.6.0"
pyparsing = "2.4.7"
pytest = "6.0.2"
pytest-cov = "2.10.1"
pytz = "2020.1"
redis = "3.5.3"
six = "1.15.0"
SQLAlchemy = "1.3.19"
toml = "0.10.1"
typed-ast = "1.4.1"
validators = "0.18.1"
vine = "1.3.0"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
WTForms = "2.3.3"
WTForms-Components = "0.10.4"
zipp = "3.1.0"
WTForms-Alchemy = "^0.17.0"
Flask-Login = "0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
